<resources>
    <string name="app_name" translatable="false">Simple Notebook</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="course_name" translatable="false">Мобильная разработка</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_open_file">Open file</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="nav_header_subtitle">Work in progress…</string>
    <string name="nav_header_title" translatable="false">Simple Notebook</string>
    <string name="github_page">GitHub page</string>
    <string name="latest_changes">Latest change</string>
    <string name="created_on">Created on</string>
    <string name="item_description">Description</string>
    <string name="confirm_exit_editing_message">Do you want to exit and save your note? (Press \"Yes\" to save, and \"Cancel\" to return, and \"No\" to exit without saving)</string>
    <string name="confirm_exit_editing_title">Exit and save</string>
    <string name="confirm_positive">Yes</string>
    <string name="confirm_negative">No</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="my_github_repo" translatable="false">https://github.com/vovagusse/notebook_project</string>
    <string name="err_no_file_manager">No file manager installed. Please download a file manager/explorer.</string>
    <string name="select_file_message">Select a file to open (.txt / .md)</string>
    <string name="preview_label">Notebook Preview</string>
    <string name="add_label">Creating notebook</string>
    <string name="editor_label">Editing</string>
    <string name="hint_notebook_name">Title</string>
    <string name="hint_notebook_body">Notebook body</string>
    <string name="err_no_notebook_title">No title was specified.</string>
    <string name="success_add_notebook">Your notebook was successfully created</string>
    <string name="err_not_found_file">File not found.</string>
    <string name="success_edit_notebook">Successfully saved edited notebook</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confiem_delete_title">Do you want to delete the notebook?</string>
    <string name="setting_internal_storage">Internal storage</string>
    <string name="setting_external_storage">External storage</string>
    <string name="setting_ascending_order">Ascending</string>
    <string name="setting_descending_order">Descending</string>
    <string name="setting_order_by_name">Order by name</string>
    <string name="setting_order_by_date_of_creation">Order by date of creation</string>
    <string name="setting_order_by_date_of_last_edited">Order by last edited</string>
    <string name="settings_group_look_and_feel">Look and feel</string>
    <string name="settings_group_files">Files</string>
    <string name="settings_item_file_storage">File storage</string>
    <string name="settings_item_app_theme">App theme</string>
    <string name="settings_item_sort_order_ascending_descending">Sort order</string>
    <string name="settings_item_sort_order_parameter">Sort by parameter</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="setting_key_app_theme">app_theme</string>
    <string name="setting_key_storage_type">storage_type</string>
    <string name="setting_key_sort_type">sort_type</string>
    <string name="setting_key_sorting_parameter">sorting_parameter</string>
    <string name="setting_key_folder">folder</string>
    <string name="settings_item_folder">Select folder</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>