<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.notebook_project.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_previewFragment"
            app:destination="@id/nav_preview"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_home_to_editorFragment"
            app:destination="@id/editorFragment" />
        <action
            android:id="@+id/action_nav_home_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_preview"
        android:name="com.example.notebook_project.ui.preview.PreviewFragment"
        android:label="@string/preview_label"
        tools:layout="@layout/fragment_preview" >
        <action
            android:id="@+id/action_nav_preview_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_preview_to_editorFragment"
            app:destination="@id/editorFragment" />
    </fragment>
    <fragment
        android:id="@+id/editorFragment"
        android:name="com.example.notebook_project.ui.editor.EditorFragment"
        android:label="@string/editor_label"
        tools:layout="@layout/fragment_editor" >
        <action
            android:id="@+id/action_editorFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_editorFragment_to_nav_preview"
            app:destination="@id/nav_preview" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.notebook_project.ui.editor.SettingsFragment"
        android:label="SettingsFragment" >
        <action
            android:id="@+id/action_settingsFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>